@@ -6,6 +6,7 @@ All changes, unless specified otherwise, made by Jelmer Vernooij
  * Default to <basename>.{txt,ly,xml} as output file and support -o - for
  writing to stdout.
  * More diagnostic messages
+ * (ptb2xml) Escape ampersands in output
 
 0.3:
  * Put chords at the right place
